--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      div {
+        height:40px;
+        width: 40px;
+        border-width:3px;
+        border: blue;
+      }
+
+      p {
+        color: blue;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      <img src="logo.png">
+      <p>You cannot access this page.</p>
+    </div>
+  </body>
+</html>
