--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       div {
         height:40px;
         width: 40px;
-        border-width:3px;
+        border:5px;
         border: blue;
       }
 
